--- a/src/app/components/offer/offer-details/offer-details.component.scss
+++ b/src/app/components/offer/offer-details/offer-details.component.scss
@@ -4,3 +4,8 @@ ion-col {
   //  border-radius: 5px;
     text-align: center;
   }
+
+  .line-row{
+    margin-top: 10px;
+    padding-top: 0px;
+  }
