--- a/src/app/pages/account-register/account-register.page.html
+++ b/src/app/pages/account-register/account-register.page.html
@@ -3,8 +3,14 @@
     <ion-buttons slot="start">
       <ion-back-button  [routerLink]="['/']" ></ion-back-button>
     </ion-buttons>
-    <ion-title>account-register</ion-title>
+    <ion-title> {{'start.accountregister' | translate}}</ion-title>
+
+    <span class="border-bottom-part-one"></span>
+    <span class="border-bottom-part-two"></span>
+    <span class="border-bottom-part-three"></span>
+    <span class="border-bottom-part-four"></span>
   </ion-toolbar>
+
 </ion-header>
 
 <ion-content [fullscreen]="true">
