--- a/src/app/pages/main-page/main-page.page.html
+++ b/src/app/pages/main-page/main-page.page.html
@@ -13,11 +13,11 @@
 
 <ion-content [fullscreen]="true" [scrollY]="false" >
 
-  <div class="top-div-search">
+  <!-- <div class="top-div-search">
 
-    <ion-searchbar  showCancelButton="focus" class="custom" #inputSearch [debounce]="500" placeholder="{{ 'app.search' | translate }}"   ></ion-searchbar>
+    <ion-searchbar  class="custom" #inputSearch [debounce]="3000" placeholder="{{ 'app.search' | translate }}"></ion-searchbar>
     
-  </div>
+  </div> -->
  
   <div class="top-div-offers"  >
       <swiper-container  
