--- a/src/app/pages/account-profile/account-profile.page.html
+++ b/src/app/pages/account-profile/account-profile.page.html
@@ -1,7 +1,9 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
+      <ion-button  [routerLink]="['/home/main-page']" >
+        <ion-icon name="chevron-back-outline"></ion-icon>
+      </ion-button>
     </ion-buttons>
     <ion-title  class="ion-text-center">{{ 'account.accountprofiletitle' | translate }}</ion-title>
     <span class="border-bottom-part-one"></span>
