--- a/src/app/pages/main-page/main-page.page.scss
+++ b/src/app/pages/main-page/main-page.page.scss
@@ -49,9 +49,10 @@ swiper-slide {
    margin-left : 10px;
    margin-right : 10px;
 }
+
 .image-container{
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100% 100%;
     background-color: antiquewhite;
     width: 100%;
     height: 100%;
