--- a/src/global.scss
+++ b/src/global.scss
@@ -109,6 +109,18 @@ ion-accordion {
     background:#ffca22;
   }
 
+  hr {
+    border: 1px solid rgb(198, 195, 195) !important;
+    height: 0px !important;
+    width: 100% !important;
+    display: block !important;
+    font-size: 2em !important;
+    opacity: 1 !important;
+    visibility: visible !important;
+    margin: 0px;
+    padding: 0px;
+  }
+
   ion-button {
     --background: var(--ion-color-primary);
   }
@@ -121,7 +133,7 @@ ion-accordion {
 
   // search bar
   ion-searchbar.custom {
-    --background: #37d4f7;
+    --background: #8f84e2;
     --color: #fff;
     --placeholder-color: #fff;
     --icon-color: #fff;
@@ -131,11 +143,11 @@ ion-accordion {
   }
   
   ion-searchbar.ios.custom {
-    --cancel-button-color: #041733;
+    --cancel-button-color: #77a8f1;
   }
   
   ion-searchbar.md.custom {
-    --cancel-button-color: #041733;
+    --cancel-button-color: #739edf;
   }
 
 
@@ -305,8 +317,13 @@ ion-modal {
   align-items:center;
   justify-content:center;
   position: absolute;
+  padding: 5px;
   height: 100%;
   width: 100%;
+  img { 
+    width: 100%;
+    height: 100%;
+  }
 } 
 
 .name-group{
@@ -335,7 +352,7 @@ ion-modal {
 .row-center-img {
   position: relative;
   margin: 0 auto;
-  height: 38vh;
+  height: 27vh;
   width: fit-content;
 }
 
@@ -449,4 +466,42 @@ ion-spinner{
   width: 30%;
   height: 100%;
   border: 1px solid black ;
+}
+
+.container-button-add{
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: flex-start;
+  width: calc(100% - 20px);
+  height: 45px;
+  margin: 10px;
+  border: 2px solid var(--ion-color-primary);
+  border-radius: 5px;
+  background-color: #07b0f3;
+}
+
+.text-des-add{
+  height:30px;
+  width: calc(100% - 90px);
+  font-weight: 900;
+  font-size: 12px;
+  margin: auto 3px ;
+  text-align: center;
+}
+
+.button-add{
+   margin: 3px;
+   height:30px;
+   width: 75px;
+   max-width: 80px;
+   min-width: 55px;
+}
+
+
+.title-button-add-products{
+  color: darkred;
+  font-size: 16px;
+  font-weight: 900;
+  margin: 5px auto;
 }
