--- a/src/app/pages/offer-suppliers-page/offer-suppliers-page.page.html
+++ b/src/app/pages/offer-suppliers-page/offer-suppliers-page.page.html
@@ -1,9 +1,20 @@
+<ion-header>
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>{{ 'app_menu.offers' | translate }}</ion-title>
+    <span class="border-bottom-part-one"></span>
+    <span class="border-bottom-part-two"></span>
+    <span class="border-bottom-part-three"></span>
+    <span class="border-bottom-part-four"></span>
+  </ion-toolbar>
+</ion-header>
 
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">offer-suppliers-page</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ion-padding" [fullscreen]="true" >
+  @for( offer of offers ; track offer.id){
+     <app-offer-view 
+             [offer]="offer" (click)="offerAccountClicked(offer.accountId)">
+     </app-offer-view>
+  }
 </ion-content>
