--- a/src/app/components/order-card/order-card.component.html
+++ b/src/app/components/order-card/order-card.component.html
@@ -30,8 +30,8 @@
     <hr/>
 
     <ion-row class="ion-justify-content-between">
-      <ion-col size="7"> {{'order.total' | translate}} {{ order!.productsValue().toFixed(2) }} </ion-col>
-      <ion-col size="5" >  {{'order.cash_back' | translate}} {{ order!.cash_back.toFixed(2) }} </ion-col>
+      <ion-col size="7"> {{'order.total' | translate}} {{ order!.productsValue().toFixed(2) }} {{ order!.currency! }} </ion-col>
+      <ion-col size="5" >  {{'order.cash_back' | translate}} {{ order!.cash_back.toFixed(2) }} {{ order!.currency! }} </ion-col>
     </ion-row>
 
     <hr/>
@@ -44,7 +44,7 @@
 
     <ion-row class="ion-justify-content-between">
       <ion-col size="9" > {{'order.productscount' | translate}}  </ion-col>
-      <ion-col size="3" > <ion-text class="ion-text-center"> {{order!.productsCount}} </ion-text></ion-col>
+      <ion-col size="3" > <ion-text class="ion-text-center"> {{order!.productsCount}} / {{order!.min_quan}}  </ion-text></ion-col>
     </ion-row>
 
     @if(order!.notValidQuan > 0){
@@ -141,11 +141,11 @@
     }
   
       <ion-row class="ion-justify-content-between">
-        <ion-col size="8" class="ion-no-padding">   {{ order!.seller_name }}  </ion-col>
-        <ion-col size="2" class="ion-no-padding"> 
+        <ion-col size="4" class="ion-no-padding">   {{ order!.seller_name }}  </ion-col>
+        <ion-col size="3" class="ion-no-padding"> 
           <ion-button color="danger" fill="outline" (click)="deleteOrder()" > {{'order.deleteorder' | translate}} </ion-button>  
         </ion-col>
-        <ion-col size="2" class="ion-no-padding"> 
+        <ion-col size="3" class="ion-no-padding"> 
           <ion-button color="success" fill="outline" (click)="updateOrder()" > {{'order.confirm' | translate}} </ion-button>  
         </ion-col>
       </ion-row>
