--- a/src/app/components/order-card/order-card.component.scss
+++ b/src/app/components/order-card/order-card.component.scss
@@ -10,9 +10,11 @@
 
 
 .seller-logo{
-    width: 100%;
-    height: 100%;
-    max-height: 200px;
+    width: 75%;
+    height: 75%;
+    max-height: 150px;
+    max-width: 125px;
+    margin: 10px;
     box-sizing: border-box;
     border: 1px rgb(161, 158, 158) solid;
     border-radius: 5px;
