--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -4,9 +4,11 @@
 }
 
 ion-badge {
-    background: purple;
-    color: white;
-    font-size: 14px;
-    padding-right: 20px;
-    padding-left: 20px;
+    --background:  rgb(35, 246, 16);
+    --color: white;
+    --padding-end: 20px;
+    --padding-start: 20px;
+    
+    font-size: 11px;
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
   }
