--- a/src/app/pages/cart-page/cart-page.page.html
+++ b/src/app/pages/cart-page/cart-page.page.html
@@ -11,7 +11,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content [class.background]="orders.length===0">
 
      @for(order of orders ;track order.id; let idx = $index){
 
