--- a/src/app/components/order-card/order-card.component.html
+++ b/src/app/components/order-card/order-card.component.html
@@ -114,7 +114,7 @@
           <app-quantity-input [detail]="detail" (quantityChange)="quanChange($event)"></app-quantity-input>
         </ion-col>
         <ion-col offset="2" size="4" class="ion-no-padding"> 
-          <ion-button color="danger" fill="outline" (click)="deleteProduct(idx)"> {{'order.deleteproduct' | translate}} </ion-button> 
+          <ion-button color="danger"  fill="outline" (click)="deleteProduct(idx)"> {{'order.deleteproduct' | translate}} </ion-button> 
         </ion-col>
       </ion-row>
       <ion-row class="ion-justify-content-between">
@@ -141,12 +141,12 @@
     }
   
       <ion-row class="ion-justify-content-between">
-        <ion-col size="4" class="ion-no-padding">   {{ order!.seller_name }}  </ion-col>
+        <ion-col size="6" class="ion-no-padding">   {{ order!.seller_name }}  </ion-col>
         <ion-col size="3" class="ion-no-padding"> 
-          <ion-button color="danger" fill="outline" (click)="deleteOrder()" > {{'order.deleteorder' | translate}} </ion-button>  
+          <ion-button size="small" color="danger"  class="button-option" fill="outline" (click)="deleteOrder()" > {{'order.deleteorder' | translate}} </ion-button>  
         </ion-col>
         <ion-col size="3" class="ion-no-padding"> 
-          <ion-button color="success" fill="outline" (click)="updateOrder()" > {{'order.confirm' | translate}} </ion-button>  
+          <ion-button size="small" color="success" class="button-option"  fill="outline" (click)="updateOrder()" > {{'order.confirm' | translate}} </ion-button>  
         </ion-col>
       </ion-row>
 
