--- a/src/app/pages/group-details/group-details.page.html
+++ b/src/app/pages/group-details/group-details.page.html
@@ -19,16 +19,16 @@
       <ion-grid class="ion-padding">
         <ion-row>
            <ion-col size="12">
-               <ion-segment scrollable >
+               <ion-segment [(ngModel)]="groupValue" scrollable >
     
-                <ion-segment-button (click)="selectAllButtonClicked()">
+                <ion-segment-button value="all" (click)="selectAllButtonClicked()">
                   <ion-label>
                     {{ 'app.select_all' | translate }}
                   </ion-label>
                  </ion-segment-button>
     
                 @for(category of categories ; track category.name){
-                   <ion-segment-button (click)="segmentButtonClicked(category)">
+                   <ion-segment-button  (click)="segmentButtonClicked(category)">
                     <ion-label>
                       {{category.name}}
                     </ion-label>
